[project]
name = "daget"
version = "0.3"
description = "Download dataset via DOI or landing page url"
authors = [
    { name = "Olof Olsson", email = "borsna@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {text = "MIT"}
dependencies = ["requests"]
requires-python = ">=3.6"

[project.scripts]
datahugger = "daget.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["daget"]